objects/EXPRN__Credit_Application__c.object
<CustomObject>
    <description>Stores credit application data from BIQ</description>
    <fields>
        <fullName>AssetAmount__c</fullName>
        <description>Asset amount</description>
        <label>Asset Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomeModelCode__c</fullName>
        <description>Only retured if you are using a custom model</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Custome Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerDisputeIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the customer has disputed information in their profile</description>
        <label>Customer Dispute Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateFiled__c</fullName>
        <description>Date the bankruptcy was filed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Filed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <description>Document number of the current action</description>
        <label>Document Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Experian Credit Application</relationshipLabel>
        <relationshipName>Experian_Credit_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_BIN_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application BIN Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Email Address</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Street_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Street Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Street_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Street Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Telephone_Cell__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Telephone - Cell</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Telephone_Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Telephone - Fax</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Telephone_Work__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Telephone - Work</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Contact_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Contact Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Credit_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Credit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Decision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Decision</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_ID_BusinessIQ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application ID (BusinessIQ)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_System_Credit_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application System Credit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Application_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business URL</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Contact_Email1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Policy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Customer_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Completed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Submitted</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Action</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Doing_Business_As_DBA_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doing Business As (DBA Name)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian Business</label>
        <referenceTo>EXPRN__Experian_Business__c</referenceTo>
        <relationshipLabel>Experian Credit Application</relationshipLabel>
        <relationshipName>Experian_Credit_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__FSR_Score__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSR Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Legal_Structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Structure</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Model_Score__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NAICS_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Number_of_Employees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Principal_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Principal Type</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SIC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Street_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__System_Decision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Decision</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Template</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Type_of_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Year_Business_Established__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Business Established</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Years_In_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Years In Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExemptAmount__c</fullName>
        <description>Exempt amount</description>
        <label>Exempt Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FilingLocation__c</fullName>
        <description>Document number of the current action</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Filing Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HighCreditLimitAmount__c</fullName>
        <description>Highest account balance the business has carried</description>
        <label>High Credit Limit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegalAction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalType__c</fullName>
        <description>Bunkruptcy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiabilityAmount__c</fullName>
        <description>Dollar amount of the debtor&apos;s liability</description>
        <label>Liability Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LimitedProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true indicates a limited profile</description>
        <label>Limited Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModelCode__c</fullName>
        <description>FSR score model code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelTitle__c</fullName>
        <description>FSR score model title</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Owner of the business, generally not reported</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PercentileRanking__c</fullName>
        <description>Percentage of businesses that would score lower than this business. 998 displays when there is a recent bankruptcy; 999 displays when there is insufficient data to score</description>
        <label>Percentile Ranking</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Probability percentage that the business will go bad</description>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProfileNumber__c</fullName>
        <description>Profile number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubliclyHeldCompany__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true indicates the business is a publicly held company</description>
        <label>Publicly Held Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecommendedCreditLimitAmount__c</fullName>
        <description>Compares the business against similar businesses. The credit line is based on trade information, industry, age of business and the Intelliscore Plus score. A proprietary calculation using these data elements generates the credit line recommendation for a business</description>
        <label>Recommended Credit Limit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RiskClass__c</fullName>
        <description>1= &quot;Low Risk&quot;, 2= &quot;Low to medium risk&quot;, 3= &quot;Medium risk&quot;, 4= &quot;Medium to high risk&quot;, 5= &quot;High risk&quot;, 998= &quot;Recent bankruptcy on file&quot;, 999= &quot;Insufficient data to score&quot;</description>
        <label>Risk Class</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>FSR score predicts the likelihood of severe delinquency or bankruptcy within the next 12 months</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Experian Credit Application</label>
    <listViews>
        <fullName>EXPRN__Experian_Credit_Application</fullName>
        <columns>NAME</columns>
        <columns>EXPRN__Street_Line_1__c</columns>
        <columns>EXPRN__City__c</columns>
        <columns>EXPRN__State__c</columns>
        <columns>EXPRN__BIN__c</columns>
        <columns>EXPRN__Application_ID_BusinessIQ__c</columns>
        <columns>EXPRN__System_Decision__c</columns>
        <columns>EXPRN__Application_System_Credit_Limit__c</columns>
        <columns>EXPRN__Decision_Action__c</columns>
        <columns>EXPRN__Application_Status__c</columns>
        <columns>EXPRN__Date_Submitted__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Experian Credit Application</label>
    </listViews>
    <listViews>
        <fullName>EXPRN__Experian_Credit_Application1</fullName>
        <columns>NAME</columns>
        <columns>EXPRN__Street_Line_1__c</columns>
        <columns>EXPRN__City__c</columns>
        <columns>EXPRN__State__c</columns>
        <columns>EXPRN__BIN__c</columns>
        <columns>EXPRN__Application_ID_BusinessIQ__c</columns>
        <columns>EXPRN__System_Decision__c</columns>
        <columns>EXPRN__Application_System_Credit_Limit__c</columns>
        <columns>EXPRN__Decision_Action__c</columns>
        <columns>EXPRN__Application_Status__c</columns>
        <columns>EXPRN__Date_Submitted__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Experian Credit Application</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Credit Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>